--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 * {
   box-sizing: border-box;
-}
-h3 {
-  color: #212121;
-  text-align: center;
-  margin-top: 61px;
-}
-.container {
-  width: 300px;
-  height: 462px;
-  margin-left: 10px;
-  margin-top: 5px;
-  border: 1px solid #e8e8e8;
+  margin: 0;
+  padding: 0;
 }
 
-.price {
+.card {
+  width: 300px;
+  margin-left: 10px;
+  margin-top: 5px;
+  padding: 60px 50px 60px;
+  border: 1px solid #e8e8e8;
+}
+.card-title {
+  color: #212121;
+  text-align: center;
+  margin-bottom: 35px;
+}
+.card-price {
   font-size: 48px;
   letter-spacing: normal;
   line-height: 20px;
@@ -23,28 +25,32 @@ h3 {
   margin-bottom: 45px;
 }
 
-.price > span {
+.card-price > span {
   font-size: 18px;
   margin-left: 13px;
 }
 
-.description {
+.card-description {
   max-width: 201px;
   text-align: center;
   font-size: 14px;
   color: #454545;
   margin: 0 auto;
   margin-bottom: 47px;
+  list-style: none;
 }
 
-button {
+.card-description > li {
+  margin-bottom: 15px;
+}
+
+.card-button {
   display: block;
-  width: 200px;
-  height: 54px;
-  text-align: center;
-  font-size: 16px;
+  text-transform: uppercase;  
+  font-weight: bold;
+  font-size: 14px;
   color: #5a5a5a;
   background-color: #ffffff;
   border: 2px solid #e8e8e8;
-  margin: 0 auto 50px;
+  padding: 21px 30px;
 }
