--- a/style.css
+++ b/style.css
@@ -2,17 +2,54 @@
   box-sizing: border-box;
 }
 
-.block {
-  display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  background-color: grey;
-  height: 400px;
-  padding: 10px;
+h3 {
+  margin-block-end: 0;
 }
 
-.item {
-  border: 1px solid;
-  background-color: tomato;
-  padding: 5px;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.title {
+  text-align: center;
+}
+
+.card {
+  width: 270px;
+  height: 349px;
+  border-radius: 4px;
+  border: 3px solid #f6f7f8;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.card-image {
+  width: 236px;
+  align-self: center;
+}
+
+.card-info {
+}
+
+.card-title {
+  display: block;
+  width: 230px;
+  color: #262626;
+  border-top: 1px solid #f6f7f8;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0.35px;
+}
+
+.card-price {
+  color: #ff4858;
+}
+
+.card-price-crossed {
+  color: #c1c8ce;
+  text-decoration: line-through;
 }
