--- a/style.css
+++ b/style.css
@@ -2,47 +2,32 @@
   box-sizing: border-box;
 }
 
-h3 {
-  margin-block-end: 0;
-}
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
 .title {
   text-align: center;
 }
 
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 760px;
+}
+
 .card {
-  width: 270px;
+  width: 22%;
   height: 349px;
-  border-radius: 4px;
-  border: 3px solid #f6f7f8;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border-radius: 4px;
+  border: 3px solid #f6f7f8;
 }
 
 .card-image {
-  width: 236px;
+  width: 80%;
   align-self: center;
-}
-
-.card-info {
-}
-
-.card-title {
-  display: block;
-  width: 230px;
-  color: #262626;
-  border-top: 1px solid #f6f7f8;
-  font-size: 14px;
-  font-weight: bold;
-  letter-spacing: 0.35px;
 }
 
 .card-price {
@@ -53,3 +38,4 @@ h3 {
   color: #c1c8ce;
   text-decoration: line-through;
 }
+
