--- a/css/style.css
+++ b/css/style.css
@@ -117,12 +117,15 @@ a {
 }
 
 .button {
+  width: 250px;
+  cursor: pointer;
   font-size: 16px;
   font-weight: 700;
   padding: 22px 50px;
   border-radius: 5px;
   border: 2px solid transparent;
-  height: 65px;
+  height: 60px;
+  text-align: center;
 }
 
 .button-primary {
@@ -132,6 +135,7 @@ a {
 }
 
 .button-outline {
+  display: inline-block;
   color: #f89c02;
   border: 2px solid #f89c02;
 }
