--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,16 @@ body {
   color: #202020;
 }
 
+a {
+  text-decoration: none;
+}
+
 .title {
   font-family: "MuseoCyrl-900", serif;
   font-weight: 900;
   font-size: 54px;
   margin-bottom: 15px;
   margin-top: 0;
-}
-
-a {
-  text-decoration: none;
 }
 
 .header {
@@ -126,7 +126,7 @@ a {
   display: block;
   width: 200px;
   text-align: right;
-  background-image: url("/img/heart.svg");
+  background-image: url("../img/heart.svg");
   background-repeat: no-repeat;
   font-size: 16px;
   line-height: 23px;
@@ -157,3 +157,75 @@ a {
   color: #f89c02;
   border: 2px solid #f89c02;
 }
+
+/* ABOUT */
+
+.about {
+  background-color: #f1f1f1;
+  padding: 99px 0;
+}
+
+.about-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  max-width: 1140px;
+  margin: auto;
+}
+
+.about-book {
+  max-width: 454px;
+  flex-shrink: 0;
+}
+
+.about-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.about-author {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  box-shadow: 0 1px 120px rgba(161, 161, 161, 0.08);
+  border-radius: 10px;
+  border: 1px solid #f3f3f3;
+  background-color: #ffffff;
+  max-width: 552px;
+  padding: 68px 53px;
+}
+
+.author-avatar {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-right: 21px;
+}
+
+.author-name {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 14px;
+}
+
+.author-link {
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  color: inherit;
+}
+
+.author-text {
+  margin-top: 24px;
+  flex-basis: 100%;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+/* READERS */
+
+
