--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@
   font-display: swap;
 }
 
+p,
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #202020;
@@ -134,6 +140,11 @@ a {
   color: inherit;
 }
 
+.buttons {
+  display: flex;
+  align-items: center;
+}
+
 .button {
   width: 250px;
   cursor: pointer;
@@ -142,7 +153,7 @@ a {
   padding: 18px 50px;
   border-radius: 5px;
   border: 2px solid transparent;
-  height: 60px;
+  min-height: 60px;
   text-align: center;
 }
 
@@ -162,7 +173,7 @@ a {
 
 .about {
   background-color: #f1f1f1;
-  padding: 99px 0;
+  padding: 93px 0 96px;
 }
 
 .about-container {
@@ -178,10 +189,20 @@ a {
   flex-shrink: 0;
 }
 
+.about-title {
+  margin-bottom: 35px;
+  font-size: 32px;
+  font-weight: 700;
+}
+
 .about-text {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+}
+
+.about-text-top {
+  margin-bottom: 30px;
 }
 
 .about-author {
@@ -193,7 +214,7 @@ a {
   border: 1px solid #f3f3f3;
   background-color: #ffffff;
   max-width: 552px;
-  padding: 68px 53px;
+  padding: 68px 117px 86px 53px;
 }
 
 .author-avatar {
@@ -205,6 +226,7 @@ a {
 }
 
 .author-name {
+  max-width: 260px;
   font-size: 16px;
   font-weight: 700;
   margin: 0;
@@ -219,11 +241,12 @@ a {
 }
 
 .author-text {
-  margin-top: 24px;
+  margin-top: 27px;
   flex-basis: 100%;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  text-align: left;
 }
 
 /* READERS */
@@ -238,16 +261,18 @@ a {
 }
 
 .readers-title {
+  margin: 0;
+  padding: 0;
   margin-bottom: 57px;
-  margin-top: 0;
+  font-size: 32px;
+  font-weight: 700;
 }
 
 .readers-images {
-  height: 360px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
+  justify-content: flex-start;
+  gap: 30px;
 }
 
 .readers-image {
