--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,13 @@ a {
 }
 
 .header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: #f1f1f1;
   padding: 22px 0;
+  z-index: 1;
 }
 
 .header-container {
@@ -68,6 +73,7 @@ a {
 
 .hero {
   padding: 62px 0 71px;
+  margin-top: 60px;
 }
 
 .hero-container {
@@ -77,8 +83,24 @@ a {
   align-items: center;
 }
 
-.hero-image {
+.image-block {
+  position: relative;
   margin-right: 122px;
+}
+
+.image-block img {
+  width: 100%;
+}
+
+.sale-label {
+  position: absolute;
+  right: 0;
+  top: 23px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #c93535;
+  padding: 12px 17px;
 }
 
 .author {
@@ -279,4 +301,58 @@ a {
   width: 165px;
   height: 165px;
   object-fit: cover;
+}
+
+/* FOOTER */
+
+.footer {
+  background-color: #f1f1f1;
+  padding: 60px 0 93px;
+}
+
+.footer-container {
+  max-width: 1120px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 32px;
+}
+
+.footer-list {
+  padding: 0;
+  list-style: none;
+}
+
+.list-item {
+  margin-bottom: 16px;
+}
+
+.footer-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.requisites {
+  margin-right: 168px;
+}
+
+.information {
+  margin-right: 157px;
+}
+
+.to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 18px;
+  box-shadow: 0 1px 120px rgba(161, 161, 161, 0.08);
+  border-radius: 4px;
+  border: 1px solid #eeeeee;
+  background-color: #ffffff;
 }
