--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,15 @@ img {
     width: 139px;
     height: 139px;
   }
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .requisites,
+  .information,
+  .contacts {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 992px) {
@@ -424,7 +433,8 @@ img {
   .button {
     width: 200px;
     font-size: 14px;
-    padding: 20px 40px;
+    padding: 14px 40px;
+    min-height: 48px;
   }
   .section-title {
     font-size: 24px;
@@ -439,6 +449,9 @@ img {
   }
   .readers {
     padding: 74px 0 81px;
+  }
+  .readers-title {
+    margin-bottom: 57px;
   }
   .readers-images {
     gap: 30px;
@@ -491,7 +504,7 @@ img {
 
 @media (max-width: 576px) {
   .container {
-    width: 90%;
+    width: 82%;
   }
   .hero {
     padding-bottom: 60px;
@@ -527,6 +540,10 @@ img {
   }
   .button {
     width: 100%;
+    min-height: 77px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .button-primary {
     margin-right: 0;
@@ -542,7 +559,7 @@ img {
     margin-bottom: 70px;
   }
   .about-author {
-    padding: 54px 44px;
+    padding: 54px 100px 69px 44px;
   }
   .author-text {
     font-size: 14px;
@@ -560,11 +577,8 @@ img {
   .readers {
     padding: 55px 0 68px;
   }
-  .readers-images {
-    gap: 23px;
-  }
   .readers-image {
-    width: 145px;
+    width: 28%;
     height: 145px;
   }
   .requisites,
@@ -592,18 +606,28 @@ img {
   }
   .title {
     font-size: 24px;
+    margin-bottom: 11px;
   }
   .author {
     font-size: 16px;
+    margin-bottom: 15px;
   }
   .subtitle {
     font-size: 18px;
+    margin-bottom: 35px;
+  }
+  .price {
+    margin-bottom: 36px;
   }
   .info-text {
     font-size: 14px;
+    margin-bottom: 18px;
   }
   .image-block {
     margin-bottom: 43px;
+  }
+  .button {
+    font-size: 16px;
   }
   .about {
     padding-bottom: 54px;
@@ -621,14 +645,18 @@ img {
     padding: 60px 0;
   }
   .readers-images {
-    gap: 15px;
-    justify-content: center;
+    /* gap: 15px; */
+    justify-content: space-between;
   }
   .readers-image {
-    width: 124px;
-    height: 124px;
+    width: 44%;
+    min-height: 124px;
   }
   .readers-image:nth-child(n + 5) {
     display: none;
+  }
+  .sale-label {
+    padding: 8px 17px;
+    font-size: 14px;
   }
 }
